--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ html {
 }
 .container {
   display: grid;
+  align-content: space-between;
   min-width: 3.35rem;
   max-width: 120rem;
   height: 100vh;
@@ -101,4 +102,26 @@ html {
   border: 0.2rem solid var(--color-gray-one);
   color: var(--color-gray-one);
   background: white;
+}
+
+/*======
+  Footer
+========*/
+.footer {
+  margin: 1.6rem 0;
+  font-size: 1.4rem;
+  text-align: center;
+  color: var(--color-footer);
+}
+
+.footer a {
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--color-footer);
+  transition: all 300ms;
+}
+.footer a:hover {
+  font-size: 1.6rem;
+  text-decoration: underline;
+  color: #ff6d5b;
 }
